--- a/src/GeoSpatial.Console/GeoSpatial.Console.csproj
+++ b/src/GeoSpatial.Console/GeoSpatial.Console.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="NetTopologySuite.IO.GeoJSON" Version="1.15.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GeoSpatial.Core\GeoSpatial.Core.csproj" />
+  </ItemGroup>
+
 </Project>
