--- a/src/GeoSpatial.Tests/GeoSpatial.Tests.csproj
+++ b/src/GeoSpatial.Tests/GeoSpatial.Tests.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\GeoSpatial.Console\GeoSpatial.Console.csproj" />
+    <ProjectReference Include="..\GeoSpatial.Core\GeoSpatial.Core.csproj" />
   </ItemGroup>
 
 </Project>
